--- a/steps/start/benefit-type/template.html
+++ b/steps/start/benefit-type/template.html
@@ -7,12 +7,12 @@
 {% set title = content.title | safe %}
 {% set hideBackButton = true %}
 {% set options = [
-    { label: content.benefitTypes.cc,  value: '30 Hours Free Childcare Scheme' },
+    { label: content.benefitTypes.cc,  value: '30 Hours Free Childcare' },
     { label: content.benefitTypes.attendanceallowance,  value: 'Attendance Allowance' },
     { label: content.benefitTypes.bereavementbenefit,  value: 'Bereavement Benefit' },
     { label: content.benefitTypes.bereavementsupportpaymentscheme,  value: 'Bereavement Support Payment Scheme' },
     { label: content.benefitTypes.carersallowance,  value: "Carer's Allowance" },
-    { label: content.benefitTypes.cb,  value: 'Child Benefit Lone Parent' },
+    { label: content.benefitTypes.cb,  value: 'Child Benefit' },
     { label: content.benefitTypes.cr,  value: 'Compensation Recovery Unit' },
     { label: content.benefitTypes.co,  value: 'Contracted Out Employment Group' },
     { label: content.benefitTypes.dla, value: 'Disability Living Allowance (DLA)' },
@@ -32,8 +32,11 @@
     { label: content.benefitTypes.retirementpension,  value: 'Retirement Pension' },
     { label: content.benefitTypes.sda, value: 'Severe Disablement Allowance' },
     { label: content.benefitTypes.socialfund,  value: 'Social Fund' },
-    { label: content.benefitTypes.tfc, value: 'Tax-Free Childcare Scheme' },
-    { label: content.benefitTypes.tc,  value: 'Tax Credits' },
+    { label: content.benefitTypes.tfc, value: 'Tax-Free Childcare' },
+    { label: content.benefitTypes.tc,  value: 'Tax Credit' },
+    { label: content.benefitTypes.ga, value: 'Guardian’s Allowance'},
+    { label: content.benefitTypes.nic, value: 'National Insurance Credits'},
+    { label: content.benefitTypes.gmp, value: 'Guaranteed Minimum Pension' },
     { label: content.benefitTypes.uc,  value: 'Universal Credit (UC)' },
     { label: content.benefitTypes.childSupport,  value: 'Child Support' },
     { label: content.benefitTypes.vaccineDamage,  value: 'Vaccine Damage' }
