updating template.html to include preparation para 2

--- a/steps/policy-pages/accessibility/template.html
+++ b/steps/policy-pages/accessibility/template.html
@@ -84,4 +84,5 @@
 
     <h2 class="govuk-heading-m">{{ content.preperation.title | safe }}</h2>
     <p class="govuk-body">{{ content.preperation.para1 | safe }}</p>
+    <p class="govuk-body">{{ content.preperation.para2 | safe }}</p>
 {% endblock %}
