--- a/steps/policy-pages/accessibility/template.html
+++ b/steps/policy-pages/accessibility/template.html
@@ -78,6 +78,7 @@
     <p class="govuk-heading-s">{{ content.nonAccessible.para1 | safe }}</p>
     <p class="govuk-body">{{ content.nonAccessible.para2 | safe }}</p>
     <p class="govuk-body">{{ content.nonAccessible.para3 | safe }}</p>
+    <p class="govuk-body">{{ content.nonAccessible.para4 | safe }}</p>
 
     <h2 class="govuk-heading-m">{{ content.toImprove.title | safe }}</h2>
     <p class="govuk-body">{{ content.toImprove.para1 | safe }}</p>
