SSCS-10429-Welsh-Accessibility-Statement (#1316)
* updating content.cy.json and template.html for Welsh accessibility statement

* updating content.cy.json

* updating template.html to show accessibility paragraph 4

--- a/steps/policy-pages/accessibility/template.html
+++ b/steps/policy-pages/accessibility/template.html
@@ -78,10 +78,12 @@
     <p class="govuk-heading-s">{{ content.nonAccessible.para1 | safe }}</p>
     <p class="govuk-body">{{ content.nonAccessible.para2 | safe }}</p>
     <p class="govuk-body">{{ content.nonAccessible.para3 | safe }}</p>
+    <p class="govuk-body">{{ content.nonAccessible.para4 | safe }}</p>
 
     <h2 class="govuk-heading-m">{{ content.toImprove.title | safe }}</h2>
     <p class="govuk-body">{{ content.toImprove.para1 | safe }}</p>
 
     <h2 class="govuk-heading-m">{{ content.preperation.title | safe }}</h2>
     <p class="govuk-body">{{ content.preperation.para1 | safe }}</p>
+    <p class="govuk-body">{{ content.preperation.para2 | safe }}</p>
 {% endblock %}
