SSCS-11856 Change cookie save from <a> to <button>
Need to submit the form for cookie manager to work

--- a/steps/policy-pages/cookie-policy/new-cookie-policy.html
+++ b/steps/policy-pages/cookie-policy/new-cookie-policy.html
@@ -176,7 +176,7 @@
                         {{ content.new.howAreTheyUsed.essentialCookies.link | safe }}
                     </a>
                 </p>
-                <p id="save-cookie-preferences" class="govuk-body govuk-button-group"><a class="govuk-button" href="#"> {{ content.new.cookies.save | safe }}</a></p>
+                <p id="save-cookie-preferences" class="govuk-body govuk-button-group"><button class="govuk-button" data-module="govuk-button"> {{ content.new.cookies.save | safe }}</button></p>
             </div>
         </div>
     </form>
