SSCS-11856 Replace cookie banner
Replace the cookie banner with one compatible
with the new cookie manager

--- a/steps/policy-pages/cookie-policy/new-cookie-policy.html
+++ b/steps/policy-pages/cookie-policy/new-cookie-policy.html
@@ -64,14 +64,14 @@
                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">{{ content.new.howAreTheyUsed.googleCookies.optOut.title | safe }}</legend>
                         <div class="govuk-radios">
                             <div class="govuk-radios__item">
-                                <input type="radio" name="analytics" id="radio-analytics-on" value="true" class="govuk-radios__input">
+                                <input type="radio" name="analytics" id="radio-analytics-on" value="on" class="govuk-radios__input">
                                 <label for="radio-analytics-on" class="govuk-label govuk-radios__label" id="radio-analytics-on-label">
                                     <span>{{ content.new.howAreTheyUsed.googleCookies.optOut.optOut1 | safe }}</span>
                                 </label>
                                 </input>
                             </div>
                             <div class="govuk-radios__item">
-                                <input type="radio" name="analytics" id="radio-analytics-off" value="false" class="govuk-radios__input" checked="checked">
+                                <input type="radio" name="analytics" id="radio-analytics-off" value="off" class="govuk-radios__input" checked="checked">
                                 <label for="radio-analytics-off" class="govuk-label govuk-radios__label" id="radio-analytics-off-label">
                                     <span>{{ content.new.howAreTheyUsed.googleCookies.optOut.optOut2 | safe }}</span>
                                 </label>
@@ -153,14 +153,14 @@
                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">{{ content.new.howAreTheyUsed.performance.optOut.title | safe }}</legend>
                         <div class="govuk-radios govuk-radios--inline u-margin-top-30">
                             <div class="govuk-radios__item">
-                                <input type="radio" name="apm" id="radio-apm-on" value="true" class="govuk-radios__input">
+                                <input type="radio" name="apm" id="radio-apm-on" value="on" class="govuk-radios__input">
                                 <label for="radio-apm-on" class="govuk-label govuk-radios__label" id="radio-apm-on-label">
                                     <span>{{ content.new.howAreTheyUsed.performance.optOut.optOut1 | safe }}</span>
                                 </label>
                                 </input>
                             </div>
                             <div class="govuk-radios__item">
-                                <input type="radio" name="apm" id="radio-apm-off" value="false" class="govuk-radios__input" checked="checked">
+                                <input type="radio" name="apm" id="radio-apm-off" value="off" class="govuk-radios__input" checked="checked">
                                 <label for="radio-apm-off" class="govuk-label govuk-radios__label" id="radio-apm-off-label">
                                     <span>{{ content.new.howAreTheyUsed.performance.optOut.optOut2 | safe }}</span>
                                 </label>
