example of changing template content based on new IBA content via template change

--- a/steps/start/benefit-type/template.html
+++ b/steps/start/benefit-type/template.html
@@ -7,6 +7,7 @@
 {% set title = content.title | safe %}
 {% set hideBackButton = true %}
 {% set options = [
+    { label: content.benefitTypes.testyTest, value: 'IBA Spike' },
     { label: content.benefitTypes.cc,  value: '30 Hours Free Childcare' },
     { label: content.benefitTypes.attendanceallowance,  value: 'Attendance Allowance' },
     { label: content.benefitTypes.bereavementbenefit,  value: 'Bereavement Benefit' },
