--- a/steps/start/create-account/template.html
+++ b/steps/start/create-account/template.html
@@ -5,7 +5,11 @@
 {% set title = content.title | safe %}
 
 {% block fields %}
-    <p class="govuk-body">{{ content.subtitle | safe }}</p>
+    {% if isTypeIba %}
+        <p class="govuk-body">{{ content.subtitleIba | safe }}</p>
+    {% else %}
+        <p class="govuk-body">{{ content.subtitle | safe }}</p>
+    {% endif %}
 
     {% call formSection() %}
         {{ selectionButtons(
