--- a/steps/compliance/mrn-date/template.html
+++ b/steps/compliance/mrn-date/template.html
@@ -7,6 +7,9 @@
 {% block fields %}
     {% if benefitType === 'UC' %}
         <img class="mrn-image" src="{{ asset_path }}images/mrn-date-uc.png"  alt="{{ content.imageAlt | safe }}">
+    {% elif benefitType === 'infectedBloodAppeal' %}
+        <!-- TODO update image with actual one -->
+        <img class="mrn-image" src="{{ asset_path }}images/mrn-date-iba.png"  alt="{{ content.imageAlt | safe }}">
     {% else %}
         <img class="mrn-image" src="{{ asset_path }}images/mrn-date.png"  alt="{{ content.imageAlt | safe }}">
     {% endif %}
