--- a/steps/representative/representative-international-details/answer.html
+++ b/steps/representative/representative-international-details/answer.html
@@ -17,15 +17,24 @@
 </div>
 <div class="govuk-summary-list">
     <dl class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">{{ content.cya.country.question | safe }}</dt>
+        <dd class="govuk-summary-list__value">
+            {{ fields.country.value }}<br>
+        </dd>
+        <dd class="govuk-summary-list__actions">
+            <a class="govuk-link" href="{{ path }}">{{ content.cya.change | safe }}</a>
+            <span class="govuk-visually-hidden">{{ content.cya.yourDetails | safe }}</span>
+        </dd>
+    </dl>
+    <dl class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">{{ content.cya.address.question | safe }}</dt>
         <dd class="govuk-summary-list__value">
-            {{ fields.addressLine1.value }}<br>
-            {% if fields.addressLine2.value %}{{ fields.addressLine2.value }}<br>{% endif %}
-            {{ fields.townCity.value }}<br>
-            {{ fields.county.value }}<br>
-            {{ fields.postCode.value }}<br>
+            {{ fields.internationalAddress.value }}<br>
         </dd>
-        <dd class="govuk-summary-list__actions"></dd>
+        <dd class="govuk-summary-list__actions">
+            <a class="govuk-link" href="{{ path }}">{{ content.cya.change | safe }}</a>
+            <span class="govuk-visually-hidden">{{ content.cya.yourDetails | safe }}</span>
+        </dd>
     </dl>
 </div>
 <div class="govuk-summary-list">
