changing template IDs

--- a/steps/identity/appellant-in-uk/template.html
+++ b/steps/identity/appellant-in-uk/template.html
@@ -7,7 +7,7 @@
 {% set title = content.title | safe %}
 
 {% block fields %}
-    <div id="languagePreference">
+    <div id="appellantInUk">
         {% call formSection() %}
             {{ selectionButtons(
                 fields.inUk,
