--- a/steps/compliance/need-mrn/template.html
+++ b/steps/compliance/need-mrn/template.html
@@ -3,21 +3,21 @@
 {% from "components/header.njk" import header %}
 {% from "components/phase_banner.njk" import phaseBanner %}
 
-{% block pageTitle %}{{ content.titleHead | safe }} - {{ commonContent[htmlLang].windowTitleSuffix | safe }}{% endblock %}
+{% block pageTitle %}{{ content.titleHead }} - {{ commonContent[htmlLang].windowTitleSuffix }}{% endblock %}
 
 {% block breadcrumbs %}
     {% call phaseBanner(commonContent[htmlLang], feedbackLink + urlPath) %}
-        {{ banner | safe }}
+        {{ banner }}
     {% endcall %}
-    <a class="govuk-back-link" href="#">{{ commonContent[htmlLang].back | safe }}</a>
+    <a class="govuk-back-link" href="#">{{ commonContent[htmlLang].back }}</a>
 {% endblock %}
 
 {% block two_thirds %}
     {{ header(content.title, size="l") }}
     <!-- TODO Replace dummy content -->
-    <p class="govuk-body">{{ content.someDummyContent | safe }}</p>
+    <p class="govuk-body">{{ content.someDummyContent }}</p>
 
     <div class="govuk-!-margin-bottom-6">
-        <a class="govuk-link" href="http://www.gov.uk">{{ content.govuk | safe }}</a>
+        <a class="govuk-link" href="http://www.gov.uk">{{ content.govuk }}</a>
     </div>
 {% endblock %}
